fix for JDK 16